@@ -1854,7 +1854,10 @@ class Title {
 
 			# Always grant access to the login page.
 			# Even anons need to be able to log in.
-			if ( $this->isSpecial( 'Userlogin' ) || $this->isSpecial( 'ChangePassword' ) ) {
+			if ( $this->isSpecial( 'Userlogin' )
+				|| $this->isSpecial( 'ChangePassword' )
+				|| $this->isSpecial( 'PasswordReset' )
+			) {
 				return true;
 			}
 
